--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@mui/styled-engine-sc": "^7.3.6",
+    "chess.js": "^1.4.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
